--- a/index.html
+++ b/index.html
@@ -233,24 +233,24 @@
         </header>
 
         <section>
-            <p>Halo Nabila, ini Javier. Aku tidak tahu ini Javier yang mana—mungkin Javier dari masa depan, atau mungkin Javier dari masa lalu, atau mungkin Javier dari masa kini, yang detik ini juga sedang mengetik, ingin menyampaikan suatu pesan khusus untukmu.</p>
+            <p>Halo nabila, ini javier, aku gatau ini javier yg mana, mungkin javier dari masa depan, atau mungkin javier dari masa lalu, atau mungkin javier dari masa kini, yg detik ini juga lagi mengetik, pengen menyampaikan suatu pesan buat nabila.</p>
 
-            <p>Ini tahun ke-3 sejak aku mengungkapkan perasaanku kepadamu, dan juga tahun ke-5 sejak kencan pertama kita.</p>
+            <p>Ini tahun ke-3 sejak aku ngungkapkan perasaanku ke kamu, dan juga tahun ke-5 since our first date.</p>
 
             <p><strong>Siapa sih Nabila itu?</strong></p>
 
-            <p>Dari tahun ke tahun aku semakin mengenalmu, dan semakin tahu “siapa sih Nabila itu?”</p>
+            <p>Dari tahun ke tahun aku juga makin kenal sama kamu, dari tahun ke tahun aku juga jadi makin tau “siapa sih nabila itu?”</p>
 
-            <p>Iya, aku tahu kamu ISFP. Menurut ChatGPT, ISFP adalah salah satu tipe kepribadian dalam Myers-Briggs Type Indicator (MBTI) yang sering disebut sebagai “The Adventurer” atau “Sang Seniman.” Orang dengan tipe ISFP dikenal dengan ~blablablablablabla~ HAHAHAHAHA, I’m joking :p</p>
+            <p>Iya, aku tau kamu isfp, kata chat gpt ISFP adalah salah satu tipe kepribadian dalam Myers-Briggs Type Indicator (MBTI) yang sering disebut sebagai “The Adventurer” atau “Sang Seniman.” Orang dengan tipe ISFP dikenal dengan ~blablablablablabla~ HAHAHAHAHA, I’m joking :p</p>
 
-            <p>Enggak, kamu bukan ISFP, kamu bukan MBTI, kamu itu “Nabila”.</p>
+            <p>Enggak, kamu bukan isfp, kamu bukan mbti, kamu itu “Nabila”.</p>
 
-            <p>Iya, Nabila! Nabila si orang yang paling unik, beda dari yang lain, dan itu adalah jawaban yang aku dapat dari pertanyaan “siapa sih Nabila itu?”</p>
+            <p>Iya, Nabila! Nabila si orang yg paling unik, beda dari yg lain, dan itu adalah jawaban yg aku dapat dari pertanyaan “siapa sih nabila itu?”</p>
 
             <p>Orang unik ini sudah menjalani kehidupan selama berapa lama coba tebak?? <strong>21 TAHUN GAESS!!</strong><br>
             tambah tua? enggak!! tambah dewasa?? iyaaa dooongg!!!</p>
 
-            <p>Sadar nggak?<br>
+            <p>Sadar ngga?<br>
             1/4 hidupmu sudah kamu lalui bareng aku, dan<br>
             1/4 hidupku juga sudah aku lalui bareng kamu.<br>
             hehe :b</p>
